<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textBcHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/bc_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textBcPricePerUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/bc_pricePerUnit"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBcHead" />

    <EditText
        android:id="@+id/inputBcPricePerUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:ems="8"
        android:hint="@string/bcHint_pricePerUnit"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBcPricePerUnit"
        app:layout_constraintTop_toBottomOf="@+id/textBcHead" />

    <TextView
        android:id="@+id/textBcDrinkerPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/bc_drinkerPricePerUnit"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBcPricePerUnit" />

    <EditText
        android:id="@+id/inputBcDrinkerPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:hint="@string/bcHint_drinkerPrice"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBcDrinkerPrice"
        app:layout_constraintTop_toBottomOf="@+id/inputBcPricePerUnit" />

    <Switch
        android:id="@+id/switchBcTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/prompt"
        android:minHeight="48dp"
        android:switchPadding="8sp"
        android:text="@string/bc_tax"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBcDrinkerPrice"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/textBcServiceCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/bc_serviceCharge"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchBcTax" />

    <EditText
        android:id="@+id/inputBcServiceCharge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="48dp"
        android:ems="8"
        android:inputType="number"
        android:hint="@string/bcHint_serviceCharge"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBcServiceCharge"
        app:layout_constraintTop_toBottomOf="@+id/switchBcTax" />

    <TextView
        android:id="@+id/textBcTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/bc_tips"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBcServiceCharge" />

    <EditText
        android:id="@+id/inputBcTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:inputType="number"
        android:hint="@string/bcHint_tips"
        android:text="@string/bc_set0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBcTips"
        app:layout_constraintTop_toBottomOf="@+id/inputBcServiceCharge" />

    <TextView
        android:id="@+id/textBcHeadCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/bc_headCount"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textBcTips" />

    <EditText
        android:id="@+id/inputBcHeadCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:hint="@string/bcHint_headCount"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textBcHeadCount"
        app:layout_constraintTop_toBottomOf="@+id/inputBcTips"/>

    <RadioGroup
        android:id="@+id/radioSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBcHeadCount">

        <RadioButton
            android:id="@+id/radioSalePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:checked="true"
            android:text="@string/bc_salePrice"
            android:tag="1"/>

        <RadioButton
            android:id="@+id/radioSalePercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8sp"
            android:text="@string/bc_salePercent"
            android:tag="2" />
    </RadioGroup>

    <EditText
        android:id="@+id/inputBcSale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8sp"
        android:ems="8"
        android:textAlignment="center"
        android:text="@string/bc_set0"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioSale" />

    <Button
        android:id="@+id/buttonBcCalculator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bc_calculator"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputBcSale" />

</androidx.constraintlayout.widget.ConstraintLayout>